@@ -24,6 +24,7 @@
   so it can send from python2 to python3
 
 - fix issue #9 - propperly terminate the worker threadpools in safe_terminate
+- fix issue #8 - no longer kill remote pids locally on jython ssh gateways
 
 - refactor socketserver, so it can be directly remote_exec'd for starting a socket gateway on a remote
 
